# Deepfake-Fusion

./: .gitignore  README.md  pyproject.toml  run_demo.py
configs/data/: face130k.yaml  genimage.yaml  openfake.yaml  semitruths_eval.yaml
configs/model/: fusion.yaml  spai.yaml  vit.yaml
configs/sweep/: default_sweep.yaml  sweep_cifake.yaml  sweep_face130k.yaml  sweep_fusion_resnet_spai_cifake.yaml  sweep_fusion_resnet_spai_face130k.yaml  sweep_fusion_resnet_spai_genimage.yaml  sweep_fusion_resnet_spai_openfake.yaml  sweep_fusion_vit_spai_cifake.yaml  sweep_fusion_vit_spai_face130k.yaml  sweep_fusion_vit_spai_genimage.yaml  sweep_fusion_vit_spai_openfake.yaml  sweep_genimage.yaml  sweep_resnet_cifake.yaml  sweep_resnet_face130k.yaml  sweep_resnet_genimage.yaml  sweep_resnet_openfake.yaml  sweep_spai_cifake.yaml  sweep_spai_face130k.yaml  sweep_spai_genimage.yaml  sweep_spai_openfake.yaml  sweep_vit_cifake.yaml  sweep_vit_face130k.yaml  sweep_vit_genimage.yaml  sweep_vit_openfake.yaml
configs/train/: frequency_spai_cifake.yaml  frequency_spai_face130k.yaml  frequency_spai_genimage.yaml  frequency_spai_openfake.yaml  fusion_resnet_spai_cifake.yaml  fusion_resnet_spai_face130k.yaml  robustness.yaml  (+16 more)
notebooks/: 00_eda.ipynb
scripts/: build_face130k_index.py  build_genimage_index.py  build_openfake_index.py  build_openfake_subset.py  evaluate.py  evaluate_robustness.py  evaluate_semitruths.py  explain.py  explain_semitruths.py  make_splits.py  plot_openfake_baseline_report.py  plot_robustness.py  plot_semitruths.py  run_batch_experiments.py  run_sweep.py  train.py
(+395 files in other folders)
